litmus-portal/self-deployer-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-deployer
  namespace: litmus
  labels:
    component: self-deployer
spec:
  replicas: 1
  selector:
    matchLabels:
      component: self-deployer
  template:
    metadata:
      labels:
        component: self-deployer
    spec:
      containers:
        - name: deployer
          image: litmuschaos/litmusportal-self-deployer:ci
          imagePullPolicy: Always
      serviceAccountName: deployer-account
