litmus-portal/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: litmus-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: litmusportal-frontend-service
              servicePort: 9001
            path: /
          - backend:
              serviceName: litmus-chaos-frontend-service
              servicePort: 9091
            path: /
